[gd_scene load_steps=11 format=2]

[ext_resource path="res://styles/style_button_hover.tres" type="StyleBox" id=1]
[ext_resource path="res://resources/sprites/mainmenu_concept.png" type="Texture" id=2]
[ext_resource path="res://styles/style_button_normal.tres" type="StyleBox" id=3]
[ext_resource path="res://styles/style_button_pressed.tres" type="StyleBox" id=4]
[ext_resource path="res://styles/font_button.tres" type="DynamicFont" id=5]
[ext_resource path="res://scenes/MainMenu.gd" type="Script" id=6]
[ext_resource path="res://styles/font_main_title.tres" type="DynamicFont" id=7]

[sub_resource type="StyleBoxLine" id=2]
color = Color( 1, 1, 1, 1 )
thickness = 10
vertical = true

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="Play" type="Button" parent="."]
margin_left = 783.0
margin_top = 847.0
margin_right = 1083.0
margin_bottom = 947.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 1 )

[node name="Credits" type="Button" parent="."]
margin_left = 265.0
margin_top = 812.0
margin_right = 565.0
margin_bottom = 912.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
text = "Credits"

[node name="Exit" type="Button" parent="."]
margin_left = 1200.0
margin_top = 850.0
margin_right = 1500.0
margin_bottom = 950.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
text = "Exit"

[node name="Credits Text" type="RichTextLabel" parent="."]
margin_right = 1922.0
margin_bottom = 761.0
custom_fonts/normal_font = ExtResource( 7 )
text = "This game has been developed by an amazing team composed by:

Renan Fernando Franco da Silva <renanfernandofranco@gmail.com>

Igor Gabriel Cavalcante de Carvalho Borges <devatdevian@gmail.com>

Lucas Guesser Targino da Silva <lucasguesserts@gmail.com>

Paulo Bassani <bassanipaulo@gmail.com>"

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
